--- a/scss/elements/_sidebar.scss
+++ b/scss/elements/_sidebar.scss
@@ -1,8 +1,8 @@
 @import "../scss/settings/sizes";
 
 .sidebar-wrap {
-    padding-right: 0;
-    margin-top: 70px + $header-height;
+    margin-top: 60px;
+    padding: 0 15px;
 
     .sidebar-title {
         margin-bottom: 20px;
@@ -23,9 +23,9 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     .sidebar-wrap {
-        padding: 0;
-        margin-top: 60px;
+        padding-right: 0;
+        margin-top: 60px + $header-height;
     }
 }
